made jQuery new listing functionality w/no AJAX post

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html>
 
 <head>
+  <link rel="stylesheet" type="text/css" href="public/styles/index.css">
 </head>
+
 <body>
+  <center><div>
+    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter listing name...">
+    </textarea>
+    <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
+  </div>
 </body>
 
 </html>
 
-<script src="public/scr/listing.js"></script>
+<script src="public/src/listing.js"></script>
 <script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="public/interface.js"></script>
+<script src="public/src/listing_interface.js"></script>
