added Listings class

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,10 +12,12 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/listing.js"></script>
+  <script src="public/src/listing.js"></script>
+  <script src="public/src/listings.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ListingSpec.js"></script>
+  <script src="spec/listingsSpec.js"></script>
 
 </head>
 
