--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 <body>
   <center><div>
-    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter listing name...">
-    </textarea>
+    <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter listing name..."></textarea>
     <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
   </div>
 </body>
