got json parse to work

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 </html>
 
 <script src="public/src/listing.js"></script>
+<script src="public/src/listings.js"></script>
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="public/src/listing_interface.js"></script>
