--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,7 +17,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/ListingSpec.js"></script>
-  <script src="spec/listingsSpec.js"></script>
+  <script src="spec/ListingsSpec.js"></script>
 
 </head>
 
