refactored class methods

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,11 @@
   <script src="lib/jasmine-3.4.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="public/src/listing.js"></script>
+  <script src="public/src/property.js"></script>
   <script src="public/src/listings.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/ListingSpec.js"></script>
+  <script src="spec/PropertySpec.js"></script>
   <script src="spec/ListingsSpec.js"></script>
 
 </head>
