--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 </html>
 
-<script src="public/src/listing.js"></script>
-<script src="public/src/listings.js"></script>
+<script src="public/src/property.js"></script>
 <script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="public/src/listing_interface.js"></script>
+<script src="public/src/property_interface.js"></script>
