--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <textarea id="new_listing_textbox" rows="4" cols="50" placeholder="Please enter listing name..."></textarea>
     <button id="new_listing_button" class="new_listing_button">Post New Listing</button>
   </div>
+  <br>
+  <table id="listings_table">
+  </table>
 </body>
+
 
 </html>
 
