--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,10 +14,11 @@
   <!-- include source files here... -->
   <script src="public/src/property.js"></script>
   <script src="public/src/listings.js"></script>
+  <script src="public/src/user.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/PropertySpec.js"></script>
-  <script src="spec/ListingsSpec.js"></script>
+  <script src="spec/UserSpec.js"></script>
 
 </head>
 
